samples/_failures_safe/1761410465_80035b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1f48ce6.c: In function ‘main’:
./samples/SAFE/__tmp_b1f48ce6.c:166:5: error: expected expression at end of input
  166 |     printf("Enter starting node (0-%d): ", node_count -
      |     ^~~~~~
./samples/SAFE/__tmp_b1f48ce6.c:166:5: error: expected declaration or statement at end of input
